WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39779
[Qt] ContextMenuQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39779
Summary
[Qt] ContextMenuQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:38:10 PDT
WebCore/platform/qt/ContextMenuQt.cpp:32: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ContextMenuQt.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 1 files
Attachments
Patch that fixes the coding style issues
(1.36 KB, patch)
2010-05-26 14:46 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.42 KB, patch)
2010-06-04 20:24 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:46:51 PDT
Created
attachment 57160
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:52:44 PDT
Qt, QtTriaged
David Levin
Comment 3
2010-05-27 11:12:16 PDT
Comment on
attachment 57160
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 20:24:06 PDT
Created
attachment 57955
[details]
Patch
WebKit Commit Bot
Comment 5
2010-06-05 05:03:57 PDT
Comment on
attachment 57955
[details]
Patch Clearing flags on attachment: 57955 Committed
r60750
: <
http://trac.webkit.org/changeset/60750
>
WebKit Commit Bot
Comment 6
2010-06-05 05:04:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug